# tokitty

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  hook-preflight-2026-07-16.md
docs/superpowers/: handoff-tray-icon.md
docs/superpowers/plans/: 2026-07-03-tokitty-poc.md  2026-07-14-sprite-upgrade.md  2026-07-18-phase3-dual-account.md  2026-07-18-phase4-customization.md  2026-07-21-tray-icon.md
docs/superpowers/specs/: 2026-07-02-tokitty-design.md  2026-07-13-tokitty-v2-design.md  2026-07-21-ci-matrix-design.md  2026-07-21-tray-icon-design.md
scripts/: render_media.py  render_sheet.py
tests/: test_accounts.py  test_activity.py  test_activity_watcher.py  test_api.py  test_credentials.py  test_customize.py  test_display.py  test_geometry.py  test_hook_writer.py  test_hooks_install.py  test_lock.py  test_main.py  test_menu.py  test_mood.py  test_paths.py  test_poller.py  test_pose.py  test_render_sheet.py  test_settings.py  test_smoke_gui.py  test_sprite_raster.py  test_sprites.py  test_tray.py  test_tray_factory.py  test_ui_layout.py  test_wsl_probe.py
tokitty/: __main__.py  accounts.py  activity.py  activity_watcher.py  api.py  credentials.py  customize.py  display.py  geometry.py  hook_writer.py  hooks_install.py  lock.py  menu.py  mood.py  paths.py  poller.py  pose.py  settings.py  sprite_raster.py  sprites.py  tray.py  ui.py  wsl_probe.py
