[project]
name = "tokitty"
version = "0.1.0"
description = "A cat-themed desktop widget for tracking Claude Code usage limits"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
tokitty = "tokitty.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tokitty*"]
